# ultimate-poll-bot

./: .gitignore  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTION_GUIDE.md  Indonesia.yml  Justfile  LICENSE.md  Makefile  QUERIES.md  README.md  alembic.ini  botfather.md  initdb.py  main.py  pyproject.toml  setup.cfg  test.py  travis_ultimate_pollbot.toml  ultimate_pollbot.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  repo_lockdown.yml
.vim/: settings.json
docker/: docker-compose.yml
i18n/: Arabic.yml  Catalan.yaml  Catalan.yml  Czech.yml  English.yml  German.yml  Indonesian.yml  Italian.yml  Persian.yml  Polish.yml  Portuguese (Brazil).yml  Spanish.yml  Turkish.yml  english.yml  german.yml  polish.yml  turkish.yml
migrations/: env.py
migrations/versions/: 2019_06_03_841eba11c02b_add_results_visible.py  2019_06_06_5b172edeaf8d_show_percentage_option.py  2019_06_10_1f4e87f7575c_rename_in_options.py  2019_06_10_89a2912d10e3_update.py  2019_06_11_9e39ba5d94c4_add_current_date.py  2019_06_16_7fe81a5d2f88_set_null_cascade_on_user_current_poll.py  2019_06_16_dd18721adbcc_add_deleted_flag_to_poll.py  2019_06_17_5e263928cf38_allow_users_to_add_options.py  2019_06_26_1a668c8e3285_add_option_description.py  2019_06_28_381ef6581a03_dateformat.py  2019_06_28_6fa1efa202b3_dateformat_on_user.py  2019_06_29_b0789eb1e8a4_due_date_on_poll.py  2019_06_30_5a27262256bb_poll_notifications.py  2019_07_02_f80d0dd2ddac_remove_deleted_flag.py  2019_07_06_5f97163991e5_rename_vote_type.py  2019_07_12_dbbc49e3ac86_locales.py  2019_08_01_c51526c16e56_single_vote_unique_index.py  2019_08_06_bd06a9545bc4_user_started_flag.py  2019_08_16_17077a9ff72a_add_summarize_flag.py  2019_08_18_1197d4b7ce86_permanentyly_summarized_flag.py  2019_08_19_215dc3cce5c3_fix_default_for_locale.py  2019_08_19_294c1896fc24_.py  2019_08_21_0a1d3e362730_doodle_compact_button_flag.py  2019_09_11_4b06fe3d82ab_daily_stats_entity.py  2019_09_16_933060cd8eeb_remove_server_defaults.py  2019_09_18_c8c17d4869a8_external_stats.py  2019_09_20_9518199afc55_notification_stats.py  2019_10_15_7783c1dc58f7_better_update_handling.py  2019_11_07_6d9c67a35dad_add_user_flags.py  2019_11_07_8f579339eb2d_introduce_broadcast_sent_flag.py  2019_11_07_b314e45c659e_remove_server_defaults.py  2019_11_07_c4feb636bb05_remove_unique_constraint_from_username.py  2019_11_14_cfd6710f2ee1_option_votes_setting.py  2019_11_15_15a162b93ce9_add_vote_priority.py  2019_11_15_2a8262678770_rename_compact_buttons.py  2019_11_15_58d240646830_add_vote_reference_refactor_references.py  2019_11_28_21574a420c32_add_unique_constraint_for_priority.py  2020_02_23_c963ca7d782b_new_inline_message_ids.py  2020_02_23_f1c0140a53d4_add_last_updated_to_user.py  2020_03_02_5a8b94fb9dd9_refactor_reference.py  (+21 more)
pollbot/: client.py  config.example.py  config.py  config.travis.py  db.py  decorators.py  enums.py  exceptions.py  i18n.py  pollbot.py  sentry.py
pollbot/display/: __init__.py  admin.py  creation.py  misc.py  (+1 more)
queries/: remove_old_uncompleted_polls.sql  stats_with_weekday.sql  vote_with_poll.sql
tests/: conftest.py  factories.py  fixtures.py  helper.py  test_ordered_vote.py  test_vote.py
(+102 files in other folders)
